Made titles correctly overflow.

--- a/static/styles/addFeedDialog.css
+++ b/static/styles/addFeedDialog.css
@@ -4,13 +4,16 @@
 }
 
 .addableTitle {
+  display:block;
+  max-width: 13vw;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .feedIcon {
   background: white;
-  width: 20%;
-  height: 20%;
+  width: 32px;
+  height: 32px;
 }
 
 .material-icons.md-light {
